syntax = "proto3";

package resources.notifications;

import "resources/common/i18n.proto";
import "resources/timestamp/timestamp.proto";
import "resources/users/users.proto";
import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/gen/go/proto/resources/notifications;notifications";

enum NotificationType {
  NOTIFICATION_TYPE_UNSPECIFIED = 0;
  NOTIFICATION_TYPE_ERROR = 1;
  NOTIFICATION_TYPE_WARNING = 2;
  NOTIFICATION_TYPE_INFO = 3;
  NOTIFICATION_TYPE_SUCCESS  = 4;
}

enum NotificationCategory {
  NOTIFICATION_CATEGORY_UNSPECIFIED = 0;
  NOTIFICATION_CATEGORY_GENERAL = 1;
  NOTIFICATION_CATEGORY_DOCUMENT = 2;
  NOTIFICATION_CATEGORY_CALENDAR = 3;
}

message Notification {
  uint64 id = 1;
  resources.timestamp.Timestamp created_at = 2;
  resources.timestamp.Timestamp read_at = 3;
  int32 user_id = 4 [(validate.rules).int32.gte = 0];
  // @sanitize
  resources.common.TranslateItem title = 5;
  NotificationType type = 6 [(validate.rules).enum.defined_only = true];
  // @sanitize
  resources.common.TranslateItem content = 7;
  NotificationCategory category = 8 [(validate.rules).enum.defined_only = true];
  optional Data data = 9;
  optional bool starred = 10;
}

message Data {
  optional Link link = 1;
  optional resources.users.UserShort caused_by = 2;
  optional CalendarData calendar = 3;
}

message Link {
  string to = 1;
  optional string title = 2;
  optional bool external = 3;
}

message CalendarData {
  optional uint64 calendar_id = 1;
  optional uint64 calendar_entry_id = 2;
}
