syntax = "proto3";

package services.auth;

import "buf/validate/validate.proto";
import "resources/accounts/accounts.proto";
import "resources/accounts/oauth2.proto";
import "resources/jobs/job_props.proto";
import "resources/permissions/attributes.proto";
import "resources/permissions/permissions.proto";
import "resources/timestamp/timestamp.proto";
import "resources/users/users.proto";
import "tagger/tagger.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/services/auth;auth";

message CreateAccountRequest {
  string reg_token = 1 [(buf.validate.field).string = {
    len: 6
    pattern: "^[0-9]{6}$"
  }];
  string username = 2 [(buf.validate.field).string = {
    min_len: 3
    max_len: 24
    pattern: "(?i)^[0-9A-ZÄÖÜß_-]{3,24}$"
  }];
  string password = 3 [(buf.validate.field).string = {
    min_len: 6
    max_bytes: 70
  }];
}

message CreateAccountResponse {
  int64 account_id = 1;
}

message LoginRequest {
  string username = 1 [(buf.validate.field).string = {
    min_len: 3
    max_len: 24
    pattern: "(?i)^[0-9A-ZÄÖÜß_-]{3,24}$"
  }];
  string password = 2 [(buf.validate.field).string = {
    min_len: 6
    max_bytes: 70
  }];
}

message LoginResponse {
  resources.timestamp.Timestamp expires = 1;
  int64 account_id = 2;
  optional ChooseCharacterResponse char = 3;
}

message LogoutRequest {}

message LogoutResponse {
  bool success = 1;
}

message ChangePasswordRequest {
  string current = 1 [(buf.validate.field).string = {
    min_len: 6
    max_bytes: 70
  }];
  string new = 2 [(buf.validate.field).string = {
    min_len: 6
    max_bytes: 70
  }];
}

message ChangePasswordResponse {
  resources.timestamp.Timestamp expires = 1;
}

message ChangeUsernameRequest {
  string current = 1 [(buf.validate.field).string = {
    min_len: 3
    max_len: 24
    pattern: "(?i)^[0-9A-ZÄÖÜß_-]{3,24}$"
  }];
  string new = 2 [(buf.validate.field).string = {
    min_len: 3
    max_len: 24
    pattern: "(?i)^[0-9A-ZÄÖÜß_-]{3,24}$"
  }];
}

message ChangeUsernameResponse {}

message ForgotPasswordRequest {
  string reg_token = 1 [(buf.validate.field).string = {
    len: 6
    pattern: "^[0-9]{6}$"
  }];
  string new = 2 [(buf.validate.field).string = {
    min_len: 6
    max_bytes: 70
  }];
}

message ForgotPasswordResponse {}

message GetAccountInfoRequest {}

message GetAccountInfoResponse {
  resources.accounts.Account account = 1;
  repeated resources.accounts.OAuth2Provider oauth2_providers = 2;
  repeated resources.accounts.OAuth2Account oauth2_connections = 3;
}

message GetCharactersRequest {}

message GetCharactersResponse {
  repeated resources.accounts.Character chars = 1;
}

message ChooseCharacterRequest {
  int32 char_id = 1 [(buf.validate.field).int32.gt = 0];
}

message ChooseCharacterResponse {
  string username = 1;
  resources.timestamp.Timestamp expires = 2;
  resources.jobs.JobProps job_props = 3;
  resources.users.User char = 4 [(tagger.tags) = "alias:\"user\""];
  repeated resources.permissions.Permission permissions = 5;
  repeated resources.permissions.RoleAttribute attributes = 6;
}

message DeleteOAuth2ConnectionRequest {
  string provider = 1 [(buf.validate.field).string.max_len = 50];
}

message DeleteOAuth2ConnectionResponse {
  bool success = 1;
}

message SetSuperuserModeRequest {
  bool superuser = 1;
  optional string job = 2 [(buf.validate.field).string.max_len = 20];
}

message SetSuperuserModeResponse {
  resources.timestamp.Timestamp expires = 2;
  optional resources.jobs.JobProps job_props = 3;
  resources.users.User char = 4 [(tagger.tags) = "alias:\"user\""];
  repeated resources.permissions.Permission permissions = 5;
  repeated resources.permissions.RoleAttribute attributes = 6;
}

// Auth Service handles user authentication, character selection and oauth2 connections
// Some methods **must** be caled via HTTP-based GRPC web request to allow cookies to be set/unset.
service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);

  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
  rpc ChangeUsername(ChangeUsernameRequest) returns (ChangeUsernameResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse);

  rpc GetCharacters(GetCharactersRequest) returns (GetCharactersResponse);
  // @perm
  rpc ChooseCharacter(ChooseCharacterRequest) returns (ChooseCharacterResponse);

  rpc GetAccountInfo(GetAccountInfoRequest) returns (GetAccountInfoResponse);

  rpc DeleteOAuth2Connection(DeleteOAuth2ConnectionRequest) returns (DeleteOAuth2ConnectionResponse);

  rpc SetSuperuserMode(SetSuperuserModeRequest) returns (SetSuperuserModeResponse);
}
